# scorched3d

./: .editorconfig  .gitattributes  .gitignore  .kateconfig  .kateproject
scorched/: README  README.md  configure-al.m4  configure-browser.m4  configure-fftw.m4  configure-flt.m4  configure-ft.m4  configure-gl.m4  configure-lua.m4  configure-ogg.m4  configure-sdl.m4  configure-sql.m4  configure-wx.m4  configure.ac  depcomp  install-sh  missing  mkinstalldirs  scorched-patch.nsi  scorched.nsi
scorched/data/: ultradisplay.xml
scorched/data/lang/: lang_RU.resource
scorched/scripts/: checkIncludeCase.pl  createAMMakefile.pl  createDmg  framewk.sh  generateDiff.pl  ms3d_ascii_export.py  showChangedOptions.pl  weaponDocs.pl
scorched/src/client/GLEXT/: GLCamera.cpp  GLCamera.h  GLCameraFrustum.cpp  GLCameraFrustum.h  GLFont2d.cpp  GLFont2d.h  GLFont2dFreeType.cpp  GLFont2dFreeType.h  GLFont2dStorage.cpp  GLFont2dStorage.h  GLFrameBufferObject.cpp  GLFrameBufferObject.h  GLGlobalState.cpp  GLGlobalState.h  GLImageItterator.cpp  GLImageItterator.h  GLImageModifier.cpp  GLImageModifier.h  GLInfo.cpp  GLInfo.h  GLLenseFlare.cpp  GLLenseFlare.h  GLMenu.cpp  GLMenu.h  GLMenuEntry.cpp  GLMenuEntry.h  GLMenuI.cpp  GLMenuI.h  GLMissingExt.h  GLShadowFrameBuffer.cpp  GLShadowFrameBuffer.h  GLState.cpp  GLState.h  GLStateExtension.cpp  GLStateExtension.h  GLTexture.cpp  GLTexture.h  GLTextureBase.cpp  GLTextureBase.h  GLTextureCubeMap.cpp  (+13 more)
scorched/src/client/GLSL/: GLSLProgram.cpp  GLSLProgram.h  GLSLShader.cpp  GLSLShader.h  GLSLShaderSetup.cpp  GLSLShaderSetup.h
scorched/src/client/GLW/: GLWBitmap.cpp  GLWBitmap.h  GLWButton.cpp  GLWButton.h  GLWChannelText.cpp  GLWChannelText.h  GLWChannelView.cpp  GLWChannelView.h  GLWChannelViewTextRenderer.cpp  GLWChannelViewTextRenderer.h  GLWChatView.cpp  GLWChatView.h  GLWCheckBox.cpp  GLWCheckBox.h  GLWCheckBoxText.cpp  GLWCheckBoxText.h  GLWColors.cpp  GLWColors.h  GLWDragger.cpp  GLWDragger.h  GLWDropDown.cpp  GLWDropDown.h  GLWDropDownColor.cpp  GLWDropDownColor.h  GLWDropDownText.cpp  GLWDropDownText.h  GLWFileView.cpp  GLWFileView.h  GLWFlag.cpp  GLWFlag.h  GLWFont.cpp  GLWFont.h  GLWIcon.cpp  GLWIcon.h  GLWIconButton.cpp  GLWIconButton.h  GLWIconList.cpp  GLWIconList.h  GLWIconTable.cpp  GLWIconTable.h  (+80 more)
scorched/src/client/client/: ClientAdmin.cpp  ClientAdmin.h  ClientAdminResultHandler.cpp  ClientAdminResultHandler.h  ClientChannelManager.cpp  ClientChannelManager.h  ClientChannelManagerI.cpp  ClientChannelManagerI.h  ClientConnectionAcceptHandler.cpp  ClientConnectionAcceptHandler.h  ClientConnectionAuthHandler.cpp  ClientConnectionAuthHandler.h  ClientConnectionRejectHandler.cpp  ClientConnectionRejectHandler.h  ClientDialog.cpp  ClientDialog.h  ClientDisconnected.cpp  ClientDisconnected.h  ClientFileHandler.cpp  ClientFileHandler.h  ClientGameStoppedHandler.cpp  ClientGameStoppedHandler.h  ClientInitializeModHandler.cpp  ClientInitializeModHandler.h  ClientLinesHandler.cpp  ClientLinesHandler.h  ClientMain.cpp  (+29 more)
(+1234 files in other folders)
